# pokemon-analytics-pipeline

./: .env  .env.example  .gitignore  README.md  main.py  postgres.session.sql  pyproject.toml
airflow/: .env  .env.example  Dockerfile  docker-compose.yaml
airflow/dags/: pokemon_dag.py
pipeline/: Dockerfile  pipeline.py  requirements.txt  s3_to_warehouse.py
pokemon_dbt/: dbt_project.yml
pokemon_dbt/models/marts/: mart_pokemon_primary_summary.sql  mart_pokemon_secondary_summary.sql  sources.yml
pokemon_dbt/models/staging/: sources.yml  stg_pokemon_stats.sql
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_pipeline/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_tier/: main.tf  outputs.tf  variables.tf
